--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-ZORDI.COM
+<!DOCTYPE html>
+<html>
+<head>
+	<title>ZORDI</title>
+
+	<link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+
+	<style type="text/css">
+		.container {
+			position: absolute;
+			left: 0vw;
+			top: 0vh;
+			width: 100vw;
+			height: 100vh;
+			border: 0px solid white;
+			background-color: rgb(247, 248, 249);
+		}
+		.child {
+			color: rgb(10, 11, 12);
+			font-size: 120px;
+			font-family: 'Fredericka the Great', cursive;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+		}
+	</style>
+</head>
+<body>
+	<div class="container">
+		<div class="child">ZORDI</div>
+	</div>
+</body>
+</html>
