--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<title>ZORDI</title>
 
 	<link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
-
 	<style type="text/css">
 		.container {
 			position: absolute;
@@ -25,7 +24,10 @@
 			transform: translate(-50%, -50%);
 		}
 	</style>
+	<link rel="manifest" href="site.webmanifest">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
 	<div class="container">
 		<div class="child">ZORDI</div>
